Add changes for module 2

--- a/src/main/webapp/WEB-INF/views/login_page.html
+++ b/src/main/webapp/WEB-INF/views/login_page.html
@@ -27,10 +27,10 @@
         <input class="login_item" type="submit" value="login">
     </form>
 
-    <form method="get" th:action="@{login/register}">
-        <br>
-        <input class="login_item" type="submit" value="Register">
-    </form>
+<!--    <form method="get" th:action="@{login/register}">-->
+<!--        <br>-->
+<!--        <input class="login_item" type="submit" value="Register">-->
+<!--    </form>-->
 
 </div>
 </body>
