--- a/src/main/webapp/WEB-INF/views/book_shelf.html
+++ b/src/main/webapp/WEB-INF/views/book_shelf.html
@@ -31,17 +31,21 @@
 </head>
 <body>
 <div id="root_container">
+
     <form method="post" th:action="@{/books/save}" th:object="${book}">
         <table>
             <tr>
                 <td>
                     <input type="text" placeholder="author" th:field="*{author}">
+                    <p th:if="${#fields.hasErrors('author')}">field author must be string and not null</p>
                 </td>
                 <td>
                     <input type="text" placeholder="book_title" th:field="*{title}">
+                    <p th:if="${#fields.hasErrors('title')}">field title must be string and not null</p>
                 </td>
                 <td>
                     <input type="text" placeholder="size (pages)" th:field="*{size}">
+                    <p th:if="${#fields.hasErrors('size')}">field size must be digit and less than 4 sign</p>
                 </td>
                 <td>
                     <input type="submit" value="save">
@@ -50,24 +54,28 @@
         </table>
     </form>
 
-    <form method="post" th:action="@{/books/remove}">
+    <form method="post" th:action="@{/books/remove}" th:object="${bookIdToRemove}">
         <table>
             <tr>
                 <td>
-                    <input type="text" placeholder="id number" th:name="bookIdToRemove">
+                    <input type="text" placeholder="id number" th:field="*{id}">
                 </td>
                 <td>
                     <input type="submit" value="remove">
+                </td>
+                <td th:if="${#fields.hasErrors()}">
+                    <p>Wrong id or not found</p>
                 </td>
             </tr>
         </table>
     </form>
 
-    <form method="post" th:action="@{/books/removeAll}">
+    <form method="post" th:action="@{/books/removeAll}" th:object="${bookField}">
         <table>
             <tr>
                 <td>
-                    <input type="text" placeholder="author, title or size" th:name="booksToRemove">
+                    <input type="text" placeholder="author, title or size" th:field="*{field}">
+                    <p th:if="${#fields.hasErrors()}">Wrong author, title or size book</p>
                 </td>
                 <td>
                     <input type="submit" value="removeAll">
@@ -76,6 +84,31 @@
         </table>
     </form>
 
+    <form method="post" th:action="@{/books/uploadFile}" enctype="multipart/form-data">
+        <table>
+            <tr>
+                <td>
+                    <input type="file" name="file"/>
+                </td>
+                <td>
+                    <input type="submit" value="Upload"/>
+                </td>
+            </tr>
+        </table>
+    </form>
+
+    <form method="post" th:action="@{/books/downloadFile}" enctype="multipart/form-data">
+        <table>
+            <tr>
+                <td>
+                    <input type="file" name="file"/>
+                </td>
+                <td>
+                    <input type="submit" value="Download"/>
+                </td>
+            </tr>
+        </table>
+    </form>
     <form method="get" th:action="@{/books/shelf}">
         <table>
             <tr>
