--- a/src/main/webapp/WEB-INF/views/errors/500.html
+++ b/src/main/webapp/WEB-INF/views/errors/500.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Custom 500</title>
 </head>
 <body>
-$END$
+<h1>Custom Book Shelf 500 Page (Internal Server Error)</h1>
+<p th:text="${errorMessage}"></p>
+<a href="/simple_mvc_war_exploded/books/shelf">back to book shelf page</a>
 </body>
 </html>
